--- a/client/src/components/admin/css/adminDashboard.css
+++ b/client/src/components/admin/css/adminDashboard.css
@@ -20,14 +20,26 @@
   border-bottom: 2px solid rgb(141, 141, 141);
 }
 .dashborad_right {
-  background-color: rgba(207, 220, 238, 0.952);
+  background-color: rgb(236, 236, 245);
 }
 
 .dashborad_right_header {
-  display: flex;
-  justify-content: center;
+  margin: auto;
+  width: 60%;
+  border: 3px solid #73ad21;
+  padding: 10px;
+}
+.dashborad_right_table {
+  margin-top: 20px;
+  background-color: white;
 }
 
-.dashborad_right_content {
-  margin-top: 20px;
+.dashborad_right_menu {
+  height: 55px;
+}
+
+.dashborad_right_menu_item {
+  box-shadow: 5px 2px 5px 4px #dad8d8;
+  background-color: white;
+  
 }
