--- a/src/components/admin/css/adminCreateNotice.css
+++ b/src/components/admin/css/adminCreateNotice.css
@@ -2,17 +2,24 @@
   margin-top: 30px;
   width: 300px;
 }
-
+.drop-zone{
+  width: 500px;
+}
 .upload-section {
   display: flex;
   height: 200px;
   margin-bottom: 10px;
+  margin-left: 20%;
   background-color: rgb(255, 255, 255);
   cursor: pointer;
 }
 .divSticky{
   position: sticky;
   top: 0px;
-  margin: 1px;
   background-color: rgb(228, 228, 228);
+  margin: 1px;
+}
+.main{
+  height: 500px;
+  margin-left: 35%;
 }
