--- a/src/components/admin/css/adminDashboard.css
+++ b/src/components/admin/css/adminDashboard.css
@@ -27,3 +27,9 @@
   
   background-color: white;
 }
+.divSticky{
+  position: sticky;
+  top: 0px;
+  margin: 1px;
+  background-color: rgb(236, 236, 245);
+}
