--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -5,6 +5,11 @@
     justify-content: start;
     align-items: center;
   }
+
+  .navHeading{
+    margin-left: 50%;
+    color: white;
+  }
   
   .menu-bars {
     margin-left: 2rem;
