--- a/src/components/admin/css/adminDashboard.css
+++ b/src/components/admin/css/adminDashboard.css
@@ -2,16 +2,11 @@
   margin-left: 90px;
 }
 
-.dashborad_right {
-  background-color: rgb(236, 236, 245);
+.dashborad_right_menu_item {
+  background-color: white;
+  height: 55px;
 }
 
-.dashborad_right_header {
-  margin: auto;
-  width: 60%;
-  border: 3px solid #73ad21;
-  padding: 10px;
-}
 .dashborad_right_table {
   margin-top: 20px;
   background-color: white;
@@ -19,17 +14,28 @@
   overflow: scroll;
 }
 
-.dashborad_right_menu {
-  height: 55px;
-}
 
-.dashborad_right_menu_item {
-  
-  background-color: white;
+.noticeUpload {
+  width: 300px;
+  margin-top: 30px;
+}
+.drop-zone{
+  width: 500px;
+}
+.upload-section {
+  display: flex;
+  height: 200px;
+  margin-bottom: 10px;
+  margin-left: 20%;
+  background-color: rgb(255, 255, 255);
+  cursor: pointer;
 }
 .divSticky{
   position: sticky;
   top: 0px;
-  background-color: rgb(236, 236, 245);
   margin: 1px;
+}
+.main{
+  height: 500px;
+  margin-left: 35%;
 }
