--- a/src/components/admin/css/adminDashboard.css
+++ b/src/components/admin/css/adminDashboard.css
@@ -34,8 +34,15 @@
   position: sticky;
   top: 0px;
   margin: 1px;
+  background-color: rgb(228, 228, 228);
 }
 .main{
   height: 500px;
   margin-left: 35%;
+}
+.drop{
+  width: 100%;
+  height: 100%;
+  border: solid white;
+  background-color: white;
 }
