--- a/src/components/admin/css/adminDashboard.css
+++ b/src/components/admin/css/adminDashboard.css
@@ -15,7 +15,10 @@
 }
 
 
-
+thead{
+  background-color: rgb(0,123,255);
+  color: white;
+}
 .tdcolors {
   background-color: rgb(230, 230, 230);
 }
