--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,5 +1,5 @@
-.navbar {
-    background-color: #3c58f8;
+.admin-navbar {
+    background-color: rgb(0,123,255);
     height: 60px;
     display: flex;
     justify-content: start;
@@ -18,7 +18,7 @@
   }
   
   .nav-menu {
-    background-color: #3c58f8;
+    background-color: rgb(0,123,255);
     width: 220px;
     height: 100vh;
     display: flex;
@@ -64,7 +64,7 @@
   }
   
   .navbar-toggle {
-    background-color: #3c58f8;
+    background-color: rgb(0,123,255);
     width: 100%;
     height: 80px;
     display: flex;
