--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,81 +1,85 @@
 .admin-navbar {
-    background-color: rgb(0,123,255);
-    height: 60px;
-    display: flex;
-    justify-content: start;
-    align-items: center;
-  }
+  background-color: rgb(0, 123, 255);
+  height: 60px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
 
-  .navHeading{
-    margin-left: 50%;
-    color: white;
-  }
-  
-  .menu-bars {
-    margin-left: 2rem;
-    font-size: 1.5rem;
-    background: none;
-  }
-  
-  .nav-menu {
-    background-color: rgb(0,123,255);
-    width: 220px;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    top: 0;
-    left: -110%;
-    transition: 850ms;
-  }
-  
-  .nav-menu.active {
-    left: 0;
-    transition: 350ms;
-  }
-  
-  .nav-text {
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    padding: 8px 0px 8px 16px;
-    list-style: none;
-    height: 60px;
-  }
-  
-  .nav-text a {
-    text-decoration: none;
-    color: #f5f5f5;
-    font-size: 18px;
-    width: 95%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    padding: 0 16px;
-    border-radius: 4px;
-  }
-  
-  .nav-text a:hover {
-    background-color: #1a83ff;
-  }
-  
-  .nav-menu-items {
-    width: 100%;
-  }
-  
-  .navbar-toggle {
-    background-color: rgb(0,123,255);
-    width: 100%;
-    height: 80px;
-    display: flex;
-    justify-content: start;
-    align-items: center;
-  }
-  
-  span {
-    margin-left: 16px;
-  }
-  .navv{
-    width: 250px;
-  }
-  
+.navHeading {
+  margin-left: 50%;
+  color: white;
+}
+
+.menu-bars {
+  margin-left: 2rem;
+  font-size: 1.5rem;
+  background: none;
+}
+
+.nav-menu {
+  background-color: rgb(0, 123, 255);
+  width: 220px;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: -110%;
+  transition: 850ms;
+}
+
+.nav-menu.active {
+  left: 0;
+  transition: 350ms;
+}
+
+.nav-text {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  padding: 8px 0px 8px 16px;
+  list-style: none;
+  height: 60px;
+}
+
+.nav-text a {
+  text-decoration: none;
+  color: #f5f5f5;
+  font-size: 18px;
+  width: 95%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  padding: 0 16px;
+  border-radius: 4px;
+}
+
+.nav-text a:hover {
+  background-color: #1a83ff;
+}
+
+.nav-menu-items {
+  width: 100%;
+}
+
+.navbar-toggle {
+  background-color: rgb(0, 123, 255);
+  width: 100%;
+  height: 80px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+
+span {
+  margin-left: 16px;
+}
+.navv {
+  width: 250px;
+}
+.divSticky {
+  position: sticky;
+  top: -1px;
+  margin: 0px;
+}
