--- a/src/components/user/css/userlogin.css
+++ b/src/components/user/css/userlogin.css
@@ -3,7 +3,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-
 }
 
 .login-container {
@@ -28,7 +27,7 @@
 
 .circle {
   position: absolute;
-  bottom: -230px;
+  bottom: -350px;
   left: 50%;
   transform: translate(-50%, -50%);
   background: #fff;
@@ -60,6 +59,7 @@
   top: 30px;
   color: rgb(255, 255, 255);
 }
+
 .login-button {
   width: 250px;
   border-radius: 25px;
@@ -109,4 +109,11 @@
   .login-container {
     max-width: 100%;
   }
+  .login-card {
+    box-shadow: none;
+  }
+  .userLogin {
+    background-color: #fff;
+  }
+  
 }
