--- a/src/components/user/css/usersignup.css
+++ b/src/components/user/css/usersignup.css
@@ -1,12 +1,16 @@
-.userLogin {
+.usersignup {
     min-height: 90vh;
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top:10px ;
   }
 
-  
-.login-radio label{
+  .spacing{
+    
+    margin-top: 25px;
+  }
+.signup-radio label{
   margin-left: .5 rem;
   
 }
@@ -14,8 +18,7 @@
 .custom-select{
   width: auto;
   position: relative;
-  z-index: -1;
- margin: 5px;
+
 }
 .custom-select select{
   width: 150px;
@@ -24,14 +27,16 @@
 }
 
   
-  .login-container {
+  .signup-container {
     min-width: 400px;
     border-radius: 20px;
   }
+
   
-  .login-card {
+  .signup-card {
     border-radius: 20px;
     height: 1000;
+    width: 500px;
     background-image: linear-gradient(
       to right,
       rgb(0, 123, 255),
@@ -42,22 +47,23 @@
     box-shadow: 0 5px 8px #414141;
     z-index: 0;
     box-sizing: border-box;
+    
   }
   
   .circle {
     position: absolute;
-    bottom: -350px;
+    bottom: -400px;
     left: 50%;
     transform: translate(-50%, -50%);
     background: #fff;
     clip-path: circle(50%);
-    height: 700px;
+    height: 720px;
     width: 600px;
     z-index: -1;
     overflow: hidden;
   }
   
-  .login-head {
+  .signup-head {
     margin-top: 30px;
     font-size: 32px;
     margin-bottom: 10px;
@@ -71,15 +77,24 @@
     background-clip: text;
   }
   
-  .login-icon {
+  .signup-icon {
     position: relative;
     display: block;
-    left: -87px;
-    top: 30px;
+    left: -128px;
+    top: 31px;
     color: rgb(255, 255, 255);
   }
-  
-  .login-button {
+
+  .drop{
+  width: 350px;
+  height: 150%;
+  border: solid rgb(35, 141, 255);
+  background-color: rgb(35, 141, 255);
+  text-align-last: center;
+  font-weight: bold;
+}
+
+  .signup-button {
     width: 250px;
     border-radius: 25px;
     background-image: linear-gradient(
@@ -92,8 +107,8 @@
     cursor: pointer;
   }
   
-  .login-input {
-    width: 220px;
+  .signup-input {
+    width: 320px;
     padding: 10px;
     padding-left: 40px;
     border-radius: 25px;
@@ -107,17 +122,17 @@
     display: block;
   }
   
-  .login-input::placeholder {
+  .signup-input::placeholder {
     color: #fff;
     opacity: 0.6;
   }
   
-  .login-input:focus {
+  .signup-input:focus {
     border: none;
     outline: none;
   }
   
-  .login-check_1 {
+  .signup-check_1 {
     font-weight: 500;
     color: rgb(85, 85, 85);
     margin: 15px auto;
@@ -125,13 +140,13 @@
   }
   
   @media (max-width: 768px) {
-    .login-container {
+    .signup-container {
       max-width: 100%;
     }
-    .login-card {
+    .signup-card {
       box-shadow: none;
     }
-    .userLogin {
+    .usersignup {
       background-color: #fff;
     }
     
