--- a/src/components/user/css/usersignup.css
+++ b/src/components/user/css/usersignup.css
@@ -86,14 +86,24 @@
   }
 
   .drop{
-  width: 350px;
+  width: 100%;
   height: 150%;
+  border-radius: 20px;
+  border: solid rgb(35, 141, 255);
+  background-color: rgb(35, 141, 255);
+  text-align-last: center;
+  font-weight: bold;
+  color: #fff;
+}
+
+.drop option{
+ 
+  border-radius: 20px;
   border: solid rgb(35, 141, 255);
   background-color: rgb(35, 141, 255);
   text-align-last: center;
   font-weight: bold;
 }
-
   .signup-button {
     width: 250px;
     border-radius: 25px;
