--- a/src/components/admin/css/adminDashboard.css
+++ b/src/components/admin/css/adminDashboard.css
@@ -23,9 +23,7 @@ thead {
   background-color: rgb(0, 123, 255);
   color: white;
 }
-.tdcolors {
-  background-color: rgb(230, 230, 230);
-}
+
 .noticeUpload {
   width: 300px;
   margin-top: 30px;
@@ -51,7 +49,7 @@ thead {
   height: 500px;
   margin-left: 35%;
 }
-.drop {
+.admin-drop {
   width: 103%;
   height: 100%;
   border: solid white;
