--- a/src/components/user/css/usersignup.css
+++ b/src/components/user/css/usersignup.css
@@ -1,91 +1,79 @@
 .usersignup {
-    min-height: 90vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top:10px ;
-  }
-
-  .spacing{
-    
-    margin-top: 25px;
-  }
-.signup-radio label{
-  margin-left: .5 rem;
-  
+  min-height: 90vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 8px;
 }
 
-.custom-select{
+.spacing {
+  margin-top: 25px;
+}
+.signup-radio label {
+  margin-left: 0.5 rem;
+}
+
+.custom-select {
   width: auto;
   position: relative;
-
 }
-.custom-select select{
+.custom-select select {
   width: 150px;
   display: hidden;
-  
 }
 
-  
-  .signup-container {
-    min-width: 400px;
-    border-radius: 20px;
-  }
+.signup-container {
+  min-width: 400px;
+  border-radius: 20px;
+}
 
-  
-  .signup-card {
-    border-radius: 20px;
-    height: 1000;
-    width: 500px;
-    background-image: linear-gradient(
-      to right,
-      rgb(0, 123, 255),
-      rgb(35, 141, 255)
-    );
-    border: none;
-    overflow: hidden;
-    box-shadow: 0 5px 8px #414141;
-    z-index: 0;
-    box-sizing: border-box;
-    
-  }
-  
-  .circle {
-    position: absolute;
-    bottom: -400px;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background: #fff;
-    clip-path: circle(50%);
-    height: 720px;
-    width: 600px;
-    z-index: -1;
-    overflow: hidden;
-  }
-  
-  .signup-head {
-    margin-top: 30px;
-    font-size: 32px;
-    margin-bottom: 10px;
-    font-weight: 700;
-    background-image: linear-gradient(
-      to right,
-      rgb(0, 123, 255),
-      rgb(35, 141, 255)
-    );
-    color: transparent;
-    background-clip: text;
-  }
-  
-  .signup-icon {
-    position: relative;
-    display: block;
-    left: -128px;
-    top: 31px;
-    color: rgb(255, 255, 255);
-  }
+.signup-card {
+  border-radius: 20px;
+  height: 87vh;
+  width: 500px;
+  border: none;
+  overflow: hidden;
+  box-shadow: 0 5px 8px #414141;
+  z-index: 0;
+  box-sizing: border-box;
+}
 
-  .drop{
+.circle {
+  position: absolute;
+  bottom: -400px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #fff;
+  clip-path: circle(50%);
+  height: 720px;
+  width: 600px;
+  z-index: -1;
+  overflow: hidden;
+}
+
+.signup-head {
+  margin-top: 25px;
+  font-size: 25px;
+  margin-bottom: 10px;
+  font-weight: 700;
+  background-image: linear-gradient(
+    to right,
+    rgb(0, 123, 255),
+    rgb(35, 141, 255)
+  );
+  color: transparent;
+  background-clip: text;
+}
+
+.signup-icon {
+  position: relative;
+  display: block;
+  left: -128px;
+  top: 31px;
+  color: rgb(255, 255, 255);
+}
+
+.drop {
   width: 100%;
   height: 150%;
   border-radius: 20px;
@@ -96,69 +84,65 @@
   color: #fff;
 }
 
-.drop option{
- 
+.drop option {
   border-radius: 20px;
   border: solid rgb(35, 141, 255);
-  background-color: rgb(35, 141, 255);
   text-align-last: center;
   font-weight: bold;
 }
-  .signup-button {
-    width: 250px;
-    border-radius: 25px;
-    background-image: linear-gradient(
-      to right,
-      rgb(0, 123, 255),
-      rgb(35, 141, 255)
-    );
-    color: #fff;
-    font-weight: 700;
-    cursor: pointer;
+.signup-button {
+  width: 250px;
+  border-radius: 25px;
+  background-image: linear-gradient(
+    to right,
+    rgb(0, 123, 255),
+    rgb(35, 141, 255)
+  );
+  color: #fff;
+  font-weight: 700;
+  cursor: pointer;
+}
+
+.signup-input {
+  width: 320px;
+  padding: 10px;
+  padding-left: 40px;
+  border-radius: 25px;
+  background-image: linear-gradient(
+    to right,
+    rgb(0, 123, 255),
+    rgb(35, 141, 255)
+  );
+  color: #fff;
+  border: none;
+  display: block;
+}
+
+.signup-input::placeholder {
+  color: #fff;
+  opacity: 0.6;
+}
+
+.signup-input:focus {
+  border: none;
+  outline: none;
+}
+
+.signup-check_1 {
+  font-weight: 500;
+  color: rgb(85, 85, 85);
+  margin: 15px auto;
+  cursor: pointer;
+}
+
+@media (max-width: 768px) {
+  .signup-container {
+    max-width: 100%;
   }
-  
-  .signup-input {
-    width: 320px;
-    padding: 10px;
-    padding-left: 40px;
-    border-radius: 25px;
-    background-image: linear-gradient(
-      to right,
-      rgb(0, 123, 255),
-      rgb(35, 141, 255)
-    );
-    color: #fff;
-    border: none;
-    display: block;
+  .signup-card {
+    box-shadow: none;
   }
-  
-  .signup-input::placeholder {
-    color: #fff;
-    opacity: 0.6;
+  .usersignup {
+    background-color: #fff;
   }
-  
-  .signup-input:focus {
-    border: none;
-    outline: none;
-  }
-  
-  .signup-check_1 {
-    font-weight: 500;
-    color: rgb(85, 85, 85);
-    margin: 15px auto;
-    cursor: pointer;
-  }
-  
-  @media (max-width: 768px) {
-    .signup-container {
-      max-width: 100%;
-    }
-    .signup-card {
-      box-shadow: none;
-    }
-    .usersignup {
-      background-color: #fff;
-    }
-    
-  }
-  
+}
