--- a/src/components/admin/css/adminDashboard.css
+++ b/src/components/admin/css/adminDashboard.css
@@ -8,7 +8,7 @@
 }
 
 .dashborad_right_table {
-  margin-top: 40px;
+  margin-top: 44px;
   background-color: white;
   height: 455px;
   overflow: scroll;
@@ -26,7 +26,8 @@ thead {
 
 .noticeUpload {
   width: 300px;
-  margin-top: 30px;
+  /* margin-top: 30px; */
+  padding-top: 100px;
 }
 .drop-zone {
   width: 500px;
@@ -43,6 +44,7 @@ thead {
   position: sticky;
   top: 58px;
   background-color: rgb(228, 228, 228);
+  padding-top: 38px;
 }
 .main {
   height: 500px;
