--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -8,32 +8,30 @@
   height: 89vh;
   margin-top: 70px;
   width: 20%;
-  overflow: hidden;
-  overflow-x: hidden;
   position: fixed;
   margin-right: 75%;
 }
 
-.home-left-view:hover {
+/* .home-left-view:hover {
   overflow-y: scroll;
-}
+} */
 
 /* Track */
-.home-left-view::-webkit-scrollbar-track {
+/* .home-left-view::-webkit-scrollbar-track {
   box-shadow: inset 0 0 5px grey;
   border-radius: 10px;
-}
+} */
 
 /* Handle */
-.home-left-view::-webkit-scrollbar-thumb {
+/* .home-left-view::-webkit-scrollbar-thumb {
   background: rgb(194, 194, 194);
   border-radius: 10px;
-}
+} */
 
 /* Handle on hover */
-.home-left-view::-webkit-scrollbar-thumb:hover {
+/* .home-left-view::-webkit-scrollbar-thumb:hover {
   background: #8d8c8c;
-}
+} */
 
 .home-middle-view {
   margin-top: 70px;
@@ -44,10 +42,14 @@
   height: 70vh;
   margin-top: 75px;
   width: 20%;
-  overflow: hidden;
+  overflow: scroll;
   overflow-x: hidden;
   position: fixed;
   margin-left: 75%;
+}
+
+.home-right-view::-webkit-scrollbar {
+  width: 10px;
 }
 
 /* Track */
@@ -62,6 +64,4 @@
   border-radius: 10px;
 }
 
-.home-right-view:hover {
-  overflow-y: scroll;
-}
+
