--- a/src/components/user/css/userlogin.css
+++ b/src/components/user/css/userlogin.css
@@ -3,6 +3,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url("../../../assets/lg.svg");
 }
 
 .login-container {
@@ -11,13 +14,13 @@
 }
 
 .login-card {
-  height: 1000;
+  margin-top: 120px;
   border: none;
   overflow: hidden;
-  box-shadow: 0 5px 8px #414141;
+  opacity: 1;
   z-index: 0;
   box-sizing: border-box;
-  background-color: white;
+  background-color: #e6e6e6;
 }
 
 
