--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,5 +1,5 @@
 .admin-navbar {
-  background-color: rgb(0, 123, 255);
+  background-color: #6C63FF;
   height: 60px;
   display: flex;
   justify-content: start;
@@ -17,8 +17,12 @@
   background: none;
 }
 
+.userNav{
+  background-color: #6C63FF;
+}
+
 .nav-menu {
-  background-color: rgb(0, 123, 255);
+  background-color: #6C63FF;
   width: 220px;
   height: 100vh;
   display: flex;
@@ -70,7 +74,7 @@
 }
 
 .navbar-toggle {
-  background-color: rgb(0, 123, 255);
+  background-color: #6C63FF;
   width: 100%;
   height: 80px;
   display: flex;
