--- a/src/components/user/css/userlogin.css
+++ b/src/components/user/css/userlogin.css
@@ -29,11 +29,7 @@
   font-size: 32px;
   margin-bottom: 10px;
   font-weight: 700;
-  background-image: linear-gradient(
-    to right,
-    rgb(0, 123, 255),
-    rgb(35, 141, 255)
-  );
+  background-color: #6C63FF;
   color: transparent;
   background-clip: text;
 }
@@ -49,11 +45,7 @@
 .login-button {
   width: 250px;
   border-radius: 0px;
-  background-image: linear-gradient(
-    to right,
-    rgb(0, 123, 255),
-    rgb(35, 141, 255)
-  );
+  background-color: #6C63FF;
   color: #fff;
   font-weight: 700;
   cursor: pointer;
@@ -64,11 +56,7 @@
   padding: 10px;
   padding-left: 40px;
   border-radius: 0px;
-  background-image: linear-gradient(
-    to right,
-    rgb(0, 123, 255),
-    rgb(35, 141, 255)
-  );
+  background-color: #6C63FF;
   color: #fff;
   border: none;
   display: block;
