updating the sighup

--- a/src/components/user/css/usersignup.css
+++ b/src/components/user/css/usersignup.css
@@ -2,10 +2,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url("../../../assets/lg.svg");
+  height: 580px;;
+
 }
 
 .signup-spacing {
-  margin-top: 50px;
+  margin-top: 25px;
 }
 .signup-spacing1 {
   margin-top: 25px;
@@ -15,18 +20,25 @@
 }
 
 .signup-container {
-  min-width: 400px;
-  margin-top: 5%;
+  
+
+  margin-top: 90px;
+  min-width: 300px;
+  border-radius: 0px;
 }
 
+
 .signup-card {
-  width: 500px;
   border: none;
-  box-shadow: 0 5px 8px #414141;
+  overflow: hidden;
+  opacity: 1;
   z-index: 0;
   box-sizing: border-box;
-  background-color: white;
-  margin-bottom: 10px;
+  background-color: #e6e6e6;
+  width: 400px;
+  background-repeat: no-repeat;
+  background-position: bottom;
+  /* background-image: url("../../../assets/lg.svg"); */
 }
 
 .signup-head {
@@ -34,8 +46,8 @@
   font-weight: 700;
   background-image: linear-gradient(
     to right,
-    rgb(0, 123, 255),
-    rgb(35, 141, 255)
+    #6C63FF,
+    #6C63FF
   );
   color: transparent;
   background-clip: text;
@@ -43,17 +55,17 @@
 .signup-icon {
   position: relative;
   display: block;
-  left: -128px;
+  left: -100px;
   top: 31px;
   color: rgb(255, 255, 255);
   padding-right: 1em;
 }
 
 .drop {
-  width: 100%;
+  width: 80%;
   height: 150%;
   border: solid rgb(35, 141, 255);
-  background-color: rgb(35, 141, 255);
+  background-color: #7d76f1;
   text-align-last: center;
   font-weight: bold;
   color: #fff;
@@ -64,7 +76,7 @@
   text-align-last: center;
   font-weight: bold;
   background-color: white;
-  color:rgb(0, 123, 255);
+  color:#6C63FF;
 }
 
 .signup-button {
@@ -72,8 +84,8 @@
   margin-top: 5px;
   background-image: linear-gradient(
     to right,
-    rgb(0, 123, 255),
-    rgb(35, 141, 255)
+    #7d76f1,
+    #7d76f1
   );
   color: #fff;
   font-weight: 700;
@@ -81,13 +93,13 @@
 }
 
 .signup-input {
-  width: 320px;
+  width: 250px;
   padding: 10px;
   padding-left: 40px;
   background-image: linear-gradient(
     to right,
-    rgb(0, 123, 255),
-    rgb(35, 141, 255)
+    #7d76f1,
+    #7d76f1
   );
   color: #fff;
   border: none;
@@ -121,4 +133,9 @@
   .usersignup {
     background-color: #fff;
   }
+}
+
+
+.col{
+  padding: 0;
 }
