--- a/src/components/home/style.css
+++ b/src/components/home/style.css
@@ -5,9 +5,10 @@
 .card-action{
     float: right;
 }
-.card-header{
-  border-bottom:0;
+.post-card-header{
   background-color: white;
+  padding-top: .25rem;
+  padding-bottom :0px;
 }
 
 .home-card{
@@ -76,8 +77,7 @@
 }
 
 
-.card-header{
-  padding-top: .25rem;
-  padding-bottom :0px;
+.post-card-header{
+  
   
 }
