--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -12,27 +12,6 @@
   margin-right: 65%;
 }
 
-/* .home-left-view:hover {
-  overflow-y: scroll;
-} */
-
-/* Track */
-/* .home-left-view::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey;
-  border-radius: 10px;
-} */
-
-/* Handle */
-/* .home-left-view::-webkit-scrollbar-thumb {
-  background: rgb(194, 194, 194);
-  border-radius: 10px;
-} */
-
-/* Handle on hover */
-/* .home-left-view::-webkit-scrollbar-thumb:hover {
-  background: #8d8c8c;
-} */
-
 .home-middle-view {
   margin-top: 70px;
   width: 40%;
@@ -55,13 +34,19 @@
 /* Track */
 .home-right-view::-webkit-scrollbar-track {
   box-shadow: inset 0 0 5px grey;
-  border-radius: 10px;
+  
 }
 
 /* Handle */
 .home-right-view::-webkit-scrollbar-thumb {
   background: rgb(194, 194, 194);
-  border-radius: 10px;
+  
+}
+
+.notice-header{
+  background-color:#6C63FF ;
+  margin-bottom: 10px;
+  color: white;
 }
 
 
