--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -34,19 +34,19 @@
 /* Track */
 .home-right-view::-webkit-scrollbar-track {
   box-shadow: inset 0 0 5px grey;
-  
 }
 
 /* Handle */
 .home-right-view::-webkit-scrollbar-thumb {
   background: rgb(194, 194, 194);
-  
 }
 
-.notice-header{
-  background-color:#6C63FF ;
+.notice-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #6c63ff;
   margin-bottom: 10px;
   color: white;
+  height: 50px;
 }
-
-
