--- a/src/components/home/style.css
+++ b/src/components/home/style.css
@@ -121,14 +121,21 @@
 .newButton
 {
   color: black;
-  border: #6c63ff solid 2px;
-  background-color: rgb(216, 228, 238);
+  border: #6c63ff solid 3px;
+  background-color: #E6E6E6;
   width: 80%;
   font: 100%;
   text-align: left;
-  border-radius: 50px;
+  border-radius: 20px;
+  height: 40px;
+  padding-left: 15px;
 }
 .newButton:hover
 {
   background-color: white;
+  cursor: text;
+}
+.newButton:focus
+{
+  box-shadow: 0px 0px;
 }
