--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -18,6 +18,7 @@
 }
 
 .home-right-view {
+  border-radius: 5px;
   height: 70vh;
   margin-top: 75px;
   width: 20%;
@@ -25,28 +26,20 @@
   overflow-x: hidden;
   position: fixed;
   margin-left: 65%;
+  background-color: white;
 }
 
 .home-right-view::-webkit-scrollbar {
-  width: 10px;
-}
-
-/* Track */
-.home-right-view::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey;
-}
-
-/* Handle */
-.home-right-view::-webkit-scrollbar-thumb {
-  background: rgb(194, 194, 194);
+  display: none;
 }
 
 .notice-header {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #6c63ff;
   margin-bottom: 10px;
-  color: white;
   height: 50px;
+  border: none;
+  font-size: large;
+  background-color: #F7F7F7;
 }
