--- a/src/components/home/style.css
+++ b/src/components/home/style.css
@@ -12,7 +12,8 @@
 }
 
 .home-card {
-  border-radius: 10px;
+  
+  margin-bottom: 15px;
 }
 
 .card-img-postedByIcon {
@@ -139,4 +140,8 @@
 }
 .UserHome-TextBoxLikeButton:focus {
   box-shadow: 0px 0px;
+}
+
+.postLike,.postComment,.postSave{
+  cursor: pointer;
 }
