--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -19,14 +19,11 @@
 
 .home-right-view {
   border-radius: 5px;
-  height: 70vh;
   margin-top: 75px;
   width: 20%;
-  overflow: scroll;
-  overflow-x: hidden;
   position: fixed;
   margin-left: 65%;
-  background-color: white;
+  
 }
 
 .home-right-view::-webkit-scrollbar {
@@ -64,5 +61,7 @@
   font: 250% bold;
   padding: 2%;
 }
-
+.eduhubFooter{
+  font-size: 13px;
+}
 /* END */
