--- a/src/components/home/style.css
+++ b/src/components/home/style.css
@@ -192,15 +192,32 @@
   background-color: #e6e6e6;
   width: 100%;
   border: 1px solid #e6e6e6;
-  height: 33px;
+  resize: vertical;
+  min-height: 50px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  padding-left: 10px;
+  padding-right: 10px;
+  max-height: 150px;
+  outline: none;
+  /* display: inline-grid;
+  vertical-align: top; */
+  /* overflow: hidden; */
 }
+/* .commentInput::-webkit-scrollbar {
+  display: none;
+} */
 
 input:focus {
   outline: none;
 }
 
 ::-webkit-input-placeholder {
-  padding: 10px;
+  
+  padding-top: 2px;
+  padding-bottom: 2px;
+  padding-left: 0px;
+  padding-right: 10px;
 }
 
 ::-webkit-input-value {
