--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -71,18 +71,18 @@
 .teamCardUp
 {
   background-color: white;
-  margin-top: 30px;
+  margin-top: 10px;
   box-shadow: 0 -2px 7px 3px rgb(44, 44, 65);
 }
 .teamCardDown
 {
   background-color: white;
-  margin-bottom: 30px;
+  margin-bottom: 15px;
   box-shadow: 0 3px 7px 3px rgb(44, 44, 65);
 }
 .teamCardDown:hover
 {
-  box-shadow: 0 0 0;
+  box-shadow: 0 3px 7px 3px rgb(31, 31, 185);
 }
 .teamCardLeft
 {
