--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -23,7 +23,6 @@
   width: 20%;
   position: fixed;
   margin-left: 65%;
-  
 }
 
 .home-right-view::-webkit-scrollbar {
@@ -38,80 +37,68 @@
   height: 50px;
   border: none;
   font-size: large;
-  background-color: #F7F7F7;
+  background-color: #f7f7f7;
 }
 /* <CSS by Amit> */
 
-.team-container{
+.team-container {
   margin-left: 16%;
 }
-.teamCol
-{
+.teamCol {
   /* border: rgb(95, 54, 54) 1px solid; */
-  
+
   padding: 2%;
   background-color: white;
   /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
 }
-.teamPic
-{
+.teamPic {
   border-radius: 50%;
   width: 150px;
   margin-right: 30px;
 }
-.teamName
-{
+.teamName {
   font: 230% bold;
   padding: 2%;
 }
-.teamNameID
-{
+.teamNameID {
   font: 90% bold;
 }
-.teamCardUp
-{
+.teamCardUp {
   background-color: white;
   margin-top: 10px;
   box-shadow: 0 -2px 7px 3px rgb(44, 44, 65);
 }
-.teamCardDown
-{
+.teamCardDown {
   background-color: white;
   margin-bottom: 15px;
   box-shadow: 0 3px 7px 3px rgb(44, 44, 65);
 }
-.teamCardDown:hover
-{
+.teamCardDown:hover {
   box-shadow: 0 3px 7px 3px rgb(31, 31, 185);
 }
-.teamCardLeft
-{
+.teamCardLeft {
   margin-left: 10px;
 }
-.teamCardRight
-{
+.teamCardRight {
   margin-left: 50px;
 }
 
-.ForumDown
-{
+.ForumDown {
   padding-top: 60px;
 }
-.ForumLeft
-{
+.ForumLeft {
   margin-left: 2%;
   width: 30%;
   border: 2px solid black;
   float: left;
 }
-.ForumRight
-{
+.ForumRight {
   margin-right: 2%;
   width: 60%;
   border: 2px solid black;
   float: right;
 }
 /* END */
-.eduhubFooter{
+.eduhubFooter {
   font-size: 13px;
 }
