--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -88,29 +88,29 @@
   min-height: 100vh;
   display: flex;
   justify-content: space-around;
+  background-color: white;
 }
 
 .forum-left-view {
-  
   height: 89vh;
   margin-top: 70px;
-  width: 15%;
+  width: 20%;
   position: fixed;
-  margin-right: 80%;
+  margin-right: 79%;
+  overflow: hidden;
 }
 
 .forum-middle-view {
-  
   margin-top: 70px;
-  width: 60%;
+  width: 50%;
 }
 
 .forum-right-view {
-  
-  margin-top: 75px;
-  width: 10%;
+  margin-top: 70px;
+  width: 20%;
   position: fixed;
-  margin-left: 75%;
+  margin-left: 80%;
+  height: 89vh;
 }
 
 /* END */
