--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -99,7 +99,13 @@
   margin-right: 79%;
   overflow: hidden;
 }
-
+.forumToBack {
+  color: white;
+}
+.forumToBack:hover {
+  color: white;
+  text-decoration: none;
+}
 .forum-middle-view {
   margin-top: 70px;
   width: 50%;
@@ -116,7 +122,6 @@
   color: whitesmoke;
   box-shadow: 7px 7px 7px rgba(0, 88, 139, 0.4);
   background-color: #124fc2;
-  transform: translateX(-5px);
 }
 .forum-question-button {
   color: whitesmoke;
@@ -131,17 +136,7 @@
   /* padding-right: 2em; */
 }
 
-.forum-question-button:after {
-  content: "";
-  position: absolute;
-  border-bottom: 10px solid transparent;
-  border-top: 10px solid transparent;
-  border-right: 20px solid #6c63ff;
-  margin-right: 185px;
-  right: 0;
-  margin-bottom: 50px;
-}
-.forum-question-button:hover::after{
+.forum-question-button:hover::after {
   border-right: 20px solid #124fc2;
 }
 
