--- a/src/components/forum/forum.css
+++ b/src/components/forum/forum.css
@@ -93,7 +93,7 @@ textarea {
   margin-bottom: 10px;
 }
 
-.forum-replyInput{
+.forum-replyInput {
   width: 350px !important;
 }
 
@@ -102,7 +102,8 @@ textarea {
 }
 
 .forum-search {
-  margin-left: 63px;
+  margin-left: 20px;
+  margin-top: 10px;
 }
 
 .forum-searchInput {
@@ -112,10 +113,10 @@ textarea {
 .forum-replyButton:hover {
   cursor: pointer;
 }
-/* .ForumQuestionDocument{
-  color: red !important;
-  font: 150% bold;
-} */
+.filterGroup{
+  
+  margin-top: 10px;
+}
 #validatedCustomFile.custom-file-input {
   color: black !important;
   border: 2px yellowgreen;
