--- a/src/components/user/css/usersignup.css
+++ b/src/components/user/css/usersignup.css
@@ -31,7 +31,7 @@
   opacity: 1;
   z-index: 0;
   box-sizing: border-box;
-  background-color: #e6e6e6;
+  background-color: #ffffff;
   width: 400px;
   background-repeat: no-repeat;
   background-position: bottom;
